- basic shield stuff - improved generated materials - codecleanup - fixed smaller other bugs - wiki update